Kubernetes_Resources/k8s_istio_gateway/istio-gateway.deployment.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: istio-demo-gateway
  namespace: app-infrastructure
spec:
  gatewayClassName: istio
  # infrastructure:
  #   parametersRef:
  #     group: ""
  #     kind: ConfigMap
  #     name: gateway-options
  listeners:
    - name: istio-demo
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
