Kubernetes_Resources/k8s_istio_gateway/istio-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-gatewayapi
  namespace: app-infrastructure
spec:
  parentRefs:
    - name: istio-demo-gateway
      namespace: app-infrastructure
  hostnames: ["localhost"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hc-ui
        - path:
            type: PathPrefix
            value: /ui
        - path:
            type: PathPrefix
            value: /healthchecks-api
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: gatewayapi-svc
          kind: Service
          namespace: backend
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-frontend-ui
  namespace: app-infrastructure
spec:
  parentRefs:
    - name: istio-demo-gateway
      namespace: app-infrastructure
  hostnames: ["localhost"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /frontend-ui
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: frontend-ui-svc
          kind: Service
          namespace: frontend
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-frontend-default
  namespace: app-infrastructure
spec:
  parentRefs:
    - name: istio-demo-gateway
      namespace: app-infrastructure
  hostnames: ["localhost"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend-ui-svc
          kind: Service
          namespace: frontend
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-kiali-dashboard
  namespace: app-infrastructure
spec:
  parentRefs:
    - name: istio-demo-gateway
      namespace: app-infrastructure
  hostnames: ["localhost"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /kiali
      backendRefs:
        - name: kiali
          kind: Service
          namespace: istio-system
          port: 20001
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-prometheus-dashboard
  namespace: app-infrastructure
spec:
  parentRefs:
    - name: istio-demo-gateway
      namespace: app-infrastructure
  hostnames: ["localhost"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /query
      backendRefs:
        - name: prometheus
          kind: Service
          namespace: istio-system
          port: 9090
    - matches:
        - path:
            type: PathPrefix
            value: /assets
      backendRefs:
        - name: prometheus
          kind: Service
          namespace: istio-system
          port: 9090
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1
      backendRefs:
        - name: prometheus
          kind: Service
          namespace: istio-system
          port: 9090
